objects/BRNSHRK__Brainshark_Learning__c.object
<CustomObject>
    <description>Brainshark learning enrollment data</description>
    <fields>
        <fullName>BRNSHRK__Brainshark_Record_ID__c</fullName>
        <description>Brainshark Unique ID composed by userId, course Id or curriculum id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Brainshark_Record_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Brainshark_Student_ID__c</fullName>
        <label>Brainshark_Student_ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Brainshark_Student_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brainshark_Student_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completion_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Content_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Course_Completed__c</fullName>
        <formula>IF(BRNSHRK__Status__c = &quot;Complete&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Course_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Course_ID__c</fullName>
        <label>Course_ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Course_Points__c</fullName>
        <label>Course_Points</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Course_Possible_Points__c</fullName>
        <label>Course_Possible_Points</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Course_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Credits__c</fullName>
        <label>Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Curriculum_ID__c</fullName>
        <label>Curriculum_ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Curriculum_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Curriculum Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Days_Enrolled_w_o_Completion__c</fullName>
        <formula>IF (OR(BRNSHRK__Status__c = &quot;Enrolled&quot;, BRNSHRK__Status__c = &quot;Incomplete&quot;),  ROUND(NOW()-BRNSHRK__Enrollment_Date__c, 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Enrolled w/o Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Days_to_Complete__c</fullName>
        <formula>BRNSHRK__Completion_Date__c - BRNSHRK__Enrollment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Enrollment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Enrollment_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__First_Viewed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First_Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Full_Name__c</fullName>
        <formula>BRNSHRK__First_Name__c +&quot; &quot;+  BRNSHRK__Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Is_Enrollment_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enrollment Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Is_Student_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Student Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Last_Viewed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last_Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Pass_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pass_Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Percent_Audio__c</fullName>
        <label>Percent_Audio</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Percent_Score__c</fullName>
        <label>Percent_Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Percent_Slides__c</fullName>
        <label>Percent_Slides</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Record_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record_Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SFDC_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brainshark_Learnings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Slides_Viewed__c</fullName>
        <label>Slides Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Student_Role__c</fullName>
        <formula>BRNSHRK__SFDC_ID__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Student__c</fullName>
        <formula>BRNSHRK__Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Topic_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__User_Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User_Company</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__User_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User_Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__User_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brainshark_Learning</label>
    <nameField>
        <displayFormat>EDU-{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>Brainshark_Learning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brainshark_Learnings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>